<resources>
    <string name="app_name">TestMap</string>


    <string name="add_location">Add my location overlay</string>
    <string name="add_compass">Add compass overlay</string>
    <string name="add_grid">Enable grid line</string>
    <string name="add_rotation">Enable rotation</string>
    <string name="add_scale">Add map Scale bar overlay</string>
    <string name="add_minimap">Add minimap</string>

    <string name="open_map">Open map</string>
    <string name="show_list">Show list</string>

    <string name="start_point">Start point</string>
    <string name="end_point">End point</string>

    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>

    <string name="close">Close</string>

    <string name="set">Set</string>







</resources>